# qrbill

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  from-style-guide.rs  with_swico.rs
src/: dimensions.rs  esr.rs  iso11649.rs  label.rs  lib.rs
src/billing_infos/: mod.rs  utils.rs
src/billing_infos/swico/: builder.rs  erro.rs  mod.rs  parser.rs  syntax.rs
src/render/: cut.rs  mod.rs  qr.rs
tests/: integration_tests.rs
