[package]
author = "Noah Hüsser <noah@huesser.dev>"
name = "qrbill"
version = "0.2.4"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Yatekii/qrbill"
documentation = "https://docs.rs/qrbill/"
license = "MIT/Apache-2.0"
description = "A implementation of [qrbill](https://www.swiss-qr-invoice.org/) in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isocountry = "0.3.2"
textwrap = "0.16.1"
thiserror = "1.0.61"
iban_validate = "4.0.1"
iso_currency = { version = "0.4.4", features = ["with-serde"] }
thousands = "0.2.0"
chrono = "0.4.38"
svg = "0.17.0"
qrcode = "0.14.0"
regex = "1.10.5"

[dev-dependencies]
anyhow = "1.0.86"
