[package]
author = "Noah Hüsser <noah@huesser.dev>"
name = "qrbill"
version = "0.2.3"
edition = "2018"
readme = "README.md"
repository = "https://github.com/Yatekii/qrbill"
documentation = "https://docs.rs/qrbill/"
license = "MIT/Apache-2.0"
description = "A implementation of [qrbill](https://www.swiss-qr-invoice.org/) in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isocountry = "0.3.2"
textwrap = "0.14.2"
thiserror = "1.0.29"
iban_validate = "4.0.0"
iso_currency = { version = "0.4.1", features = ["with-serde"] }
thousands = "0.2.0"
chrono = "0.4.19"
qrcode = "0.12.0"
regex = "1.5.4"
svg = "0.17.0"
svg2pdf = "0.11.0"

[dev-dependencies]
anyhow = "1.0.44"